# it-helpdesk-ticket-system

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  create_db.py  db.py  package-lock.json  package.json  pyproject.toml  run.py  scripts.js
app/: __init__.py  data.py  enums.py  forms.py  models.py
app/forms/: create_ticket.py  feedback.py  login.py  registration.py  ticket.py  user.py
app/routes/: admin.py  auth.py  constants.py  user.py
app/static/: admin.css  admin.js  auth.css  base.css  base.js  logout.js  style.css  ticket.css  user.css
app/templates/: base.html
app/templates/admin/: base.html  dashboard.html  manage_tickets.html  manage_users.html
app/templates/auth/: base.html  login.html  register.html
app/templates/dashboards/: admin.html  user.html
app/templates/user/: base.html  create_ticket.html  dashboard.html  update_ticket.html
tests/: conftest.py
tests/test_routes/: test_admin.py  test_auth.py  test_user.py
tests/test_scripts/: admin.test.js  admin_dom.html  logout.test.js
