[tool.poetry]
name = "flask-helpdesk"
version = "0.1.0"
description = ""
authors = ["Maryam Awan <maryamawan04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
python-dotenv = "^1.1.0"
email-validator = "^2.2.0"
flask-bcrypt = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
